--- a/api/MovieSwipe.API/Properties/launchSettings.json
+++ b/api/MovieSwipe.API/Properties/launchSettings.json
@@ -3,11 +3,18 @@
     "MovieSwipe.API": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "graphql",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "launchUrl": "graphql",
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/graphql",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
